restructured backend to add color, logout button stores library songs into db
